hphp/test/slow/autoload/function_autoload_map.php.expectf
array(2) {
  [0]=>
  string(8) "function"
  [1]=>
  string(8) "foo\test"
}
array(2) {
  [0]=>
  string(8) "function"
  [1]=>
  string(4) "test"
}

Fatal error: Call to undefined function foo\test() in %s/hphp/test/slow/autoload/function_autoload_map.php on line 9
